prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/const_scope_1.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/const_scope_1.nut:4:6

print(x)
      ^


